[tool.poetry]
name = "brolang"
version = "0.1.0"
description = ""
authors = ["DavidIfebueme <davidifebueme@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.1.0"
web3 = "^7.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
